# freeocd-cli

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: cli.rs  hex.rs  logging.rs  main.rs  ops.rs
src/dap/: arm.rs  mod.rs
src/dapjs/: mod.rs  rtt.rs
src/platform/: mod.rs  nordic.rs
src/targets/: definition.rs  mod.rs  probe_filters.rs
